syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package paymentinfopb;

service PaymentInfoAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message PaymentInfo {
	string UUID = 1;
	string userUUID = 2;
	string Name = 3;
	string cardNumber = 4;
	string securityCode = 5;
	string ExpirationDate = 6;
	google.protobuf.Timestamp createdAt = 7;
	google.protobuf.Timestamp updatedAt = 8;
	google.protobuf.Timestamp deletedAt = 9;
}

message GetRequest {
    string UUID = 1;
}

message GetResponse {
    PaymentInfo paymentInfo = 1;
}

message SetRequest {
	PaymentInfo paymentInfo = 1;
}

message SetResponse {
	string UUID = 1;
}

message UpdateRequest {
	PaymentInfo paymentInfo = 1;
}

message DeleteRequest {
    string UUID = 1;
}
